<resources>
    <string name="app_name">CtrlAutomacao</string>
    <string name="title_home">Início</string>
    <string name="title_dashboard">Painel</string>
    <string name="title_notifications">Avisos</string>
    <string name="title_cad_dispositivo">Cad. Dispositivo</string>
    <string name="estado">Estado:</string>
    <string name="l_ligado_d_desligado">L=ligado/D=desligado</string>
    <string name="grupo">Grupo:</string>
    <string name="ilumina_o">Iluminação</string>
    <string name="tipo">Tipo:</string>
    <string name="lampada">Lampada</string>
    <string name="ambiente">Ambiente:</string>
    <string name="salvar">Salvar</string>
    <string name="title_con_dispositivo">con. Dispositivo</string>

    <string-array name="lista_ambientes">
        <item>Sala</item>
        <item>Cozinha</item>
        <item>Quarto</item>
    </string-array>


</resources>